--- a/build.yaml
+++ b/build.yaml
@@ -19,7 +19,7 @@
 #
 ---
 include:
-  - board: nice_nano_v2
-    shield: corne_left
-  - board: nice_nano_v2
-    shield: corne_right
+- board: nice_nano_v2
+    shield: kyria_left nice_view_adapter nice_view_gem #updated entry
+- board: nice_nano_v2
+    shield: kyria_right nice_view_adapter nice_view_gem #updated entry
